# Jenkins

./: CMakeLists.txt
src/: lib.hpp  main.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  test.cpp
